fix coversProviders bugs

--- a/core/css/files.css
+++ b/core/css/files.css
@@ -1,7 +1,3 @@
-.rom:hover {
-  -webkit-filter: invert(0%);
-}
-
 .platform.unavailable:hover{
   #-webkit-filter: grayscale(100%) blur(2px);  
 }
@@ -38,7 +34,7 @@
 .rom, .platform{
   z-index:1;
   background-color:rgba(250,250,250,1);
-  padding: 2px;
+  padding: 0px;
   overflow-x:hidden;
   word-wrap: break-word;  
 }
