--- a/views/platforms/default/style.css
+++ b/views/platforms/default/style.css
@@ -23,7 +23,7 @@
   height:100%;
   text-align:center;  
   background-repeat:no-repeat;
-  background-size:cover;
+  background-size:contain;
 }
 
 #stats{
